--- a/plugins.html
+++ b/plugins.html
@@ -26,9 +26,9 @@
                 <button id="dropdown_btn">Extend<span id="arrow"></span></button>
                 <div id="dropdown-menu">
                     <li><a href="Themes.html">Themes</a></li>
-                    <li><a href="#">Plugins</a></li>
+                    <li><a href="patterns.html">Plugins</a></li>
                     <li><a href="#" style="text-decoration: underline; color: blue">Patterns</a></li>
-                    <li><a href="#">Blocks</a></li>
+                    <li><a href="blocks.html">Blocks</a></li>
                 </div>
             </div>
             <div id="dropdown">
