--- a/enterprise.html
+++ b/enterprise.html
@@ -30,7 +30,7 @@
             <li><a href="Themes.html">Themes</a></li>
             <li><a href="patterns.html">Plugins</a></li>
             <li><a href="plugins.html">Patterns</a></li>
-            <li><a href="#">Blocks</a></li>
+            <li><a href="blocks.html">Blocks</a></li>
           </div>
         </div>
         <div id="dropdown">
