--- a/enterprise.html
+++ b/enterprise.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="enterprise.css">
     <script defer src="enterprise.js"></script>
     <title>Enterprise – WordPress.org</title>
+    <link rel="icon" type="image/png" href="res/logo.png">
 </head>
 
 <body>
