--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="about.css">
     <script defer src="about.js"></script>
     <title>About – WordPress.org</title>
+    <link rel="icon" type="image/png" href="res/logo.png">
 </head>
 
 <body>
