--- a/blocks.html
+++ b/blocks.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="blocks.css">
     <script defer src="blocks.js"></script>
+    <link rel="icon" type="image/png" href="res/logo.png">
     <title>Blocks – WordPress.org</title>
 </head>
 
