added download pages

--- a/FiveForTheFuture.html
+++ b/FiveForTheFuture.html
@@ -63,7 +63,7 @@
                 >Five for the Future</a
               >
             </li>
-            <li><a href="#">Events</a></li>
+            <li><a href="comms.html">Events</a></li>
           </div>
         </div>
         <div id="dropdown">
@@ -85,7 +85,7 @@
             />
           </div>
         </button>
-        <button id="getwordpress">Get WordPress</button>
+        <button id="getwordpress" onclick="openDownload()">Get WordPress</button>
       </div>
     </div>
     <!------------------------------------------------------------- HEADER END ------------------------------------------------------------->
