--- a/MakeWordPress.html
+++ b/MakeWordPress.html
@@ -58,7 +58,7 @@
             </li>
             <li><a href="PhotoDirectory.html">Photo Directory</a></li>
             <li><a href="FiveForTheFuture.html">Five for the Future</a></li>
-            <li><a href="#">Events</a></li>
+            <li><a href="comms.html">Events</a></li>
           </div>
         </div>
         <div id="dropdown">
@@ -80,7 +80,7 @@
             />
           </div>
         </button>
-        <button id="getwordpress">Get WordPress</button>
+        <button id="getwordpress" onclick="openDownload()">Get WordPress</button>
       </div>
     </div>
     <!------------------------------------------------------------- HEADER END ------------------------------------------------------------->
