--- a/PhotoDirectory.html
+++ b/PhotoDirectory.html
@@ -60,7 +60,7 @@
               >
             </li>
             <li><a href="FiveForTheFuture.html">Five for the Future</a></li>
-            <li><a href="#">Events</a></li>
+            <li><a href="comms.html">Events</a></li>
           </div>
         </div>
         <div id="dropdown">
@@ -82,7 +82,7 @@
             />
           </div>
         </button>
-        <button id="getwordpress">Get WordPress</button>
+        <button id="getwordpress" onclick="openDownload()">Get WordPress</button>
       </div>
     </div>
     <!------------------------------------------------------------- HEADER END ------------------------------------------------------------->
