--- a/download.html
+++ b/download.html
@@ -24,10 +24,10 @@
         <div id="dropdown">
           <button id="dropdown_btn">Extend<i id="down-arrow"></i></button>
           <div id="dropdown-menu">
-            <li><a href="#">Themes</a></li>
-            <li><a href="#">Plugins</a></li>
-            <li><a href="#">Patterns</a></li>
-            <li><a href="#">Blocks</a></li>
+            <li><a href="Themes.html">Themes</a></li>
+            <li><a href="patterns.html">Plugins</a></li>
+            <li><a href="plugins.html">Patterns</a></li>
+            <li><a href="blocks.html">Blocks</a></li>
           </div>
         </div>
         <div id="dropdown">
@@ -45,7 +45,7 @@
             <li><a href="MakeWordPress.html">Make WordPress</a></li>
             <li><a href="PhotoDirectory.html">Photo Directory</a></li>
             <li><a href="FiveForTheFuture.html">Five for the Future</a></li>
-            <li><a href="#">Events</a></li>
+            <li><a href="comms.html">Events</a></li>
           </div>
         </div>
         <div id="dropdown">
@@ -84,7 +84,7 @@
             <button id="dl-wp">Download WordPress 6.5.3</button>
             <button id="install-guide">Installation Guide</button>
           </div>
-          <p style="font-size:14px;">
+          <p style="font-size: 14px">
             Recommend PHP 7.4 or greater and MySQL version 8.0 or MariaDB
             version 10.4 or greater.
           </p>
@@ -95,8 +95,41 @@
           <button>See all recommended hosts</button>
         </div>
       </div>
+      <div id="try-wp-container">
+        <div>
+          <p>
+            Still not sure? Explore WordPress Playground, a live demo
+            environment from your browser.
+            <a href="#" style="text-decoration: underline; color: blue"
+              >Try WordPress ↗</a
+            >
+          </p>
+        </div>
+      </div>
+      <div id="desc-container">
+        <div id="desc-1">
+          <div id="desc-1-cont">
+            <div>Simple</div>
+            <div>Intuitive</div>
+            <div>Extendable</div>
+            <div>Free</div>
+            <div style="border-bottom: none">Open</div>
+          </div>
+        </div>
+        <div id="desc-2">
+          <div>
+            <h1>Powerful right out of the box</h1>
+            <p>
+              WordPress combines simplicity for users and publishers with
+              under-the-hood complexity for developers. Discover the features
+              that come standard with WordPress, and extend what the platform
+              can do with the thousands of plugins available.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- BODY END  --> 
+    <!-- BODY END  -->
     <div id="footer">
       <div id="col1">
         <a href="about.html">About</a>
