--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li><a href="MakeWordPress.html">Make WordPress</a></li>
             <li><a href="PhotoDirectory.html">Photo Directory</a></li>
             <li><a href="FiveForTheFuture.html">Five for the Future</a></li>
-            <li><a href="#">Events</a></li>
+            <li><a href="comms.html">Events</a></li>
           </div>
         </div>
         <div id="dropdown">
@@ -72,7 +72,7 @@
             />
           </div>
         </button>
-        <button id="getwordpress">Get WordPress</button>
+        <button id="getwordpress" onclick="openDownload()">Get WordPress</button>
       </div>
     </div>
     <!--------------------------------------------------------------------HEADER END-------------------------------------------------------------------->
