--- a/showcase.html
+++ b/showcase.html
@@ -62,7 +62,7 @@
             <li><a href="MakeWordPress.html">Make WordPress</a></li>
             <li><a href="PhotoDirectory.html">Photo Directory</a></li>
             <li><a href="FiveForTheFuture.html">Five for the Future</a></li>
-            <li><a href="#">Events</a></li>
+            <li><a href="comms.html">Events</a></li>
           </div>
         </div>
         <div id="dropdown">
@@ -84,7 +84,7 @@
             />
           </div>
         </button>
-        <button id="getwordpress">Get WordPress</button>
+        <button id="getwordpress" onclick="openDownload()">Get WordPress</button>
       </div>
     </div>
     <!------------------------------------------------------------- HEADER END ------------------------------------------------------------->
