--- a/download.html
+++ b/download.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="index.js"></script>
     <link rel="stylesheet" href="download.css" />
-    <title>Document</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="res/WordPress-logotype-wmark-white.ico"
+    />
+    <title>Download - WordPress.org</title>
   </head>
   <body>
     <div id="header">
