added button func in index

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           includes a new way to manage fonts, exciting new foundational APIs for
           developers, and an impressive performance boost.
         </p>
-        <button>Discover WordPress 6.5</button>
+        <button onclick="openDownload()">Discover WordPress 6.5</button>
       </div>
       <div id="swn-content-2">
         <div id="swn-content-2-img">
@@ -188,7 +188,7 @@
         </div>
       </div>
       <div id="explore-btn-container">
-        <button>Explore the showcase</button>
+        <button onclick="openShowCase()">Explore the showcase</button>
       </div>
     </div>
     <div id="samples">
